--- a/Expense Tracker/Expense Tracker/wwwroot/css/site.css
+++ b/Expense Tracker/Expense Tracker/wwwroot/css/site.css
@@ -15,4 +15,73 @@ html {
 
 body {
   margin-bottom: 60px;
+  background-color: #12161d;
+  color: #fff;
+}
+
+.e-bigger {
+    font-size: x-large;
+}
+
+/*Grid*/
+.e-grid {
+    border: 0;
+    border-radius: 5px;
+}
+
+    .e-grid .e-gridcontent, .e-grid .e-table {
+        background-color: #1a222b;
+    }
+
+    .e-grid .e-gridheader {
+        border: 5px;
+        border-top-left-radius: 5px;
+        border-top-right-radius: 5px;
+        padding: 10px;
+        background-color: #222b33;
+    }
+
+        .e-grid .e-gridheader .e-headercell {
+            background-color: #222b33;
+        }
+
+    .e-grid .e-gridpager {
+        background-color: #1a222b;
+    }
+
+    .e-grid .e-pagercontainer {
+        border: none;
+        background-color: #1a222b;
+    }
+
+    .e-grid .e-content table {
+        padding: 0px 10px;
+    }
+
+/*Radio buttton group*/
+.e-btn-group.custom-rbt-group{
+    width: 100%;
+}
+
+.e-btn-group.custom-rbt-group .e-btn{
+    width: 50%;    
+}
+
+.custom-rbt-group label.e-btn {
+    box-shadow: none !important;
+    background-color: rgb(34 43 51);
+    color: #fff;
+    border: 1px solid #fff;
+}
+
+.e-btn-group.custom-rbt-group input:checked + label.e-btn{
+    background-color: #fff;
+    color: #212b36;
+    border: 1px solid #fff;
+}
+
+/*Widget*/
+.widget{
+    border-radius: 1rem;
+    background-color: #1a222b;
 }
