--- a/Expense Tracker/Expense Tracker/Views/Category/Index.cshtml
+++ b/Expense Tracker/Expense Tracker/Views/Category/Index.cshtml
@@ -1,21 +1,20 @@
 ﻿@model IEnumerable<Expense_Tracker.Models.Category>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["pageTitle"] = "Categories";
+    ViewData["pageActionText"] = "+ New Category";
+    ViewData["pageActionUrl"] = "/Category/AddOrEdit";
 }
-
-<h1>Index</h1>
-
-<p>
-    <a asp-action="AddOrEdit">Create New</a>
 
 <div class="row">
     <div class="col-md-7">
-        <ejs-grid id="categories" dataSource="@Model" gridLines="None">
+        <ejs-grid id="categories" dataSource="@Model" gridLines="None"
+        allowSorting="true" allowPaging="true">
+            <e-grid-pagesettings pageSize="5"></e-grid-pagesettings>
             <e-grid-columns>
-                <e-grid-column headerText="Category" field="Title"></e-grid-column>
-                <e-grid-column headerText="Type" field="Type"></e-grid-column>
-                <e-grid-column headerText="Category"></e-grid-column>
+                <e-grid-column headerText="Category" field="TitleWithIcon"></e-grid-column>
+                <e-grid-column headerText="Type" template="#typeColumnTemplate" width="150px"></e-grid-column>
+                <e-grid-column headerText="Actions" template="#actionColumnTemplate" width="100px"></e-grid-column>
             </e-grid-columns>
         </ejs-grid>
     </div>
@@ -25,3 +24,27 @@
         </div>
     </div>
 </div>
+
+    <script id="typeColumnTemplate" type="text/x-template">
+        ${if(Type=="Income")}
+            <span class="badge bg-success">${Type}</span>
+        ${else}
+           <span class="badge bg-danger">${Type}</span>
+        ${/if}
+    </script>
+
+
+<script id="actionColumnTemplate" type="text/x-template">
+    <div class="d-flex flex-row justify-content-start">
+        <a class="btn btn-sm no-a-decoration" href="/Category/AddOrEdit/${CategoryId}">
+            <i class="fa-solid fa-pen fa-lg"></i>
+        </a>
+        <form action="/Category/Delete/${CategoryId}" method="post">
+            @Html.AntiForgeryToken()
+            <button type="submit" class="btn btn-sm btn-link no-a-decoration"
+            onclick="return confirm(&qout;Are you sure to delete this record?&qout;)">
+                <i class="fa-solid fa-trash-can fa-lg text-danger"></i>
+            </button>
+        </form>
+    </div>
+</script>
