--- a/Expense Tracker/Expense Tracker/wwwroot/css/site.css
+++ b/Expense Tracker/Expense Tracker/wwwroot/css/site.css
@@ -11,16 +11,37 @@ html {
 html {
   position: relative;
   min-height: 100%;
+  font-family: "Inter";
+}
+
+*:not(.fa-solid):not(.fa):not(.e-icons) {
+    font-family: "Inter";
 }
 
 body {
-  margin-bottom: 60px;
-  background-color: #12161d;
-  color: #fff;
+    margin-bottom: 60px;
+    background-color: #12161d;
+    color: #fff;
 }
 
 .e-bigger {
     font-size: x-large;
+}
+/*BreadCrumb*/
+.e-breadcrumb a, .e-breadcrumb a:hover{
+    text-decoration: none !important;
+    color: inherit !important;
+}
+/*Button*/
+.btn:focus, .btn:active{
+    outline: none !important;
+    box-shadow: none;
+}
+
+/*Hyperlink*/
+.no-a-decoration, .no-a-decoration:hover{
+    text-decoration: none;
+    color: inherit;
 }
 
 /*Grid*/
